# mool

./: .gitignore  Cargo.toml  LICENSE  README.md  test.js
crates/mool/: Cargo.toml
crates/mool-cli/: Cargo.toml
crates/mool-cli/src/: main.rs
crates/mool-codegen/: Cargo.toml
crates/mool-codegen/src/: lib.rs  llvm.rs  llvm_codegen.rs  scope.rs
crates/mool-codegen/src/llvm/: codegen.rs  codegen_expr.rs  codegen_literal.rs  codegen_operator.rs  codegen_program.rs
crates/mool-ir/: Cargo.toml
crates/mool-ir/examples/: assign.mool  function.mool
crates/mool-ir/src/: ast.rs  lib.rs  parser.rs
crates/mool-op/: Cargo.toml
crates/mool-python/: Cargo.toml  pyproject.toml
crates/mool-python/src/: lib.rs
crates/mool-torchscript/: Cargo.toml
crates/mool-torchscript/src/: ast.rs  codegen.rs  lib.rs  parser.rs
crates/mool/src/: ast.rs  lib.rs  parser.rs
example/: assign.py  test.py
example/mool/: add.mool  function.mool  literal.mool  operator.mool  tensor.mool
example/torchscript/: add  div  mul  sub  test
tools/onnx-test-model/: README.md  main.py
tools/python-ast/: .gitignore  main.py  requirements.txt
tools/python-ast/example/: function.py
tools/torchscript-generator/: main.py
