[package]
name = "mool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mool_torchscript = { path = "../mool-torchscript" }
peg = "0.8.0"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
